Fix #30998: copy to selected in properties editor not working for bones.